<resources>

    <string name="app_name">MCMUAsteroids</string>

    <!-- Main activity -->
    <string name="asteroids">Asteroids</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!-- Asteroids activity menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_location">Location</string>
    <string name="menu_take_pic">Take a pic</string>
    <string name="menu_calc_factorial">Calculate factorial</string>
    <string name="menu_play_video">Play video</string>
    <string name="menu_show_location_info">Show location info</string>
    <string name="menu_show_google_maps_inside">Show google maps inside</string>

    <!-- About activity -->
    <string name="about_text">Information about this app developers team (Juan Jesús Izquierdo Doménech)</string>

    <!-- Scores activity -->
    <string name="scores">Scores</string>
    <string name="no_scores">No scores</string>
    <string name="selection">Selection</string>

    <!-- Main preferences -->
    <string name="play_music">Play music</string>
    <string name="play_music_summary">Play bg music</string>

    <string name="graphics_level">Graphics level</string>
    <string name="graphics_level_summary">Choose graphics level</string>

    <string name="asteroid_fragments">Asteroids count</string>
    <string name="asteroid_fragments_summary">Choose asteroid division number</string>

    <string name="multiplayer">Multiplayer</string>

    <string name="activate_multiplayer">Activate multiplayer mode</string>

    <string name="max_players">Max players</string>

    <string name="connection_type">Connection type</string>

    <string name="sensors">Sensors</string>
    <string name="sensors_summary">Use sensors for gameplay</string>
    <string name="activate_orientation_sensor">Enable orientation</string>
    <string name="activate_accelerometer_sensor">Enable accelerometer</string>

    <!-- arrays.xml strings -->
    <string name="vector">Vector</string>
    <string name="bitmap">Bitmap</string>
    <string name="threeD">3D</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>

    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">Wi-Fi</string>
    <string name="internet">Internet</string>

    <string name="none">None</string>
    <string name="orientation">Orientation</string>
    <string name="accelerometer">Accelerometer</string>

    <!-- Google maps activity -->
    <string name="go_to_upv">Go to the UPV</string>
    <string name="to_my_location">Go to my location</string>
    <string name="add_marker">Add marker</string>
    <string name="score_storage">Score storage</string>
    <string name="score_storage_summary">Choose score storage type</string>
    <string name="array">Array</string>
    <string name="preferences">Preferences</string>
    <string name="internal_file">Internal file</string>
    <string name="external_file">External file</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="cannot_read_ext_memory">Cannot read external memory</string>
    <string name="raw_res">Raw resource</string>
    <string name="assets_res">Asset resource</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="sax">SAX XML</string>
    <string name="dom">DOM XML</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="sqlite">SQLite</string>
    <string name="content_provider">Content provider</string>
    <string name="sqlite_rel">SQLite Rel</string>
    <string name="ten">10</string>
    <string name="content_resolver_not_installed">Content Resolver \'org.example.scoresprovider\' not installed</string>
    <string name="socket">Socket</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fiveteen">15</string>
    <string name="word_to_search">Word to search</string>
    <string name="search">Search</string>
    <string name="menu_search_google">Search in google</string>
    <string name="not_found">Not found</string>
    <string name="downloading_magic">Downloading magic...</string>
    <string name="error_connecting">Error connecting</string>
    <string name="local_xammp">Local XAMMP</string>
    <string name="error_connecting_server">Error connecting server</string>
    <string name="error_time_exceed">Time exceeeded</string>
    <string name="error_async_task">Error with async task</string>
    <string name="hostinazo_ws">Hostinazo WS</string>


</resources>
